--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "net4pg"]
+	path = net4pg
+	url = https://github.com/laurafancello/net4pg
+	shallow = true
+	registered = true
